kustomize/components/clairpostgres/postgres.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: clair-postgres
  labels:
    quay-component: clair-postgres
  annotations:
    quay-component: clair-postgres
spec:
  serviceName: clair-postgres
  replicas: 1
  selector:
    matchLabels:
      quay-component: clair-postgres
  template:
    metadata:
      labels:
        quay-component: clair-postgres
    spec:
      terminationGracePeriodSeconds: 180
      serviceAccountName: clair-postgres
      volumes:
        - name: clair-postgres-conf-sample
          configMap:
            name: clair-postgres-conf-sample
        - name: postgres-data
          persistentVolumeClaim:
            claimName: clair-postgres-13
      containers:
        - name: clair-postgres
          image: quay.io/sclorg/postgresql-13-c9s:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: clair-postgres-conf-sample
              mountPath: /usr/share/pgsql/postgresql.conf.sample
              subPath: postgresql.conf.sample
            - name: postgres-data
              mountPath: /var/lib/pgsql/data
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
  volumeClaimTemplates: []
